--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile files('libs/smack-resolver-minidns-4.1.1.jar')
     compile files('libs/smack-sasl-provided-4.1.1.jar')
     compile files('libs/smack-tcp-4.1.1.jar')
+    compile files('libs/universal-image-loader-1.9.4.jar')
 }
