添加美酒商城下级页面 - 美酒列表页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,7 +91,11 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".shop.IndexActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".shop.ShopActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".shop.ShopDetailActivity"></activity>
     </application>
 
 </manifest>
