--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -179,6 +179,12 @@
         <activity
             android:name=".party.PartySignUpActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+
+        <!-- 微信支付相关 -->
+        <activity
+            android:name="com.sicao.smartwine.wxapi.WXPayEntryActivity"
+            android:exported="true"
+            android:launchMode="singleTop" />
     </application>
 
 </manifest>
