--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -192,7 +192,10 @@
         <activity
             android:name=".user.FeedBackActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".user.UserInfoActivity"></activity>
+        <activity
+            android:name=".user.UserInfoActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".user.AddressListActivity"></activity>
     </application>
 
 </manifest>
